--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,22 @@
 // Navigation code here
+
+html {
+    font-size: 62.5%;
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-top: 2%;
+    .bg-color-mixin();  //***mixin used***//
+    padding-bottom: 2%;
+    padding-left: 10%;
+
+    a:link {
+        text-decoration: none;
+        color: black;
+        font-size: 1.5rem;
+        padding-right: 8%;
+    }
+}
