--- a/css/index.css
+++ b/css/index.css
@@ -186,6 +186,11 @@ nav {
   padding-bottom: 2%;
   padding-left: 10%;
 }
+@media (max-width: 500px) {
+  nav {
+    background-color: white;
+  }
+}
 nav a:link {
   text-decoration: none;
   color: black;
@@ -235,9 +240,15 @@ html {
 }
 .home .page-title {
   font-size: 3.4rem;
-  background-color: #dad6d6;
   width: 100%;
   padding-left: 33%;
+}
+@media (max-width: 500px) {
+  .home .page-title {
+    background-color: white;
+    padding-left: 0%;
+    text-align: center;
+  }
 }
 .home .space-images {
   display: flex;
