--- a/less/navigation.less
+++ b/less/navigation.less
@@ -13,6 +13,10 @@ nav {
     padding-bottom: 2%;
     padding-left: 10%;
 
+    @media @phone {
+        background-color: white;
+    }
+
     a:link {
         text-decoration: none;
         color: black;
