--- a/less/home-page.less
+++ b/less/home-page.less
@@ -68,7 +68,12 @@ html {
       margin: 20px 2.5%;
       height: 100%;
     }
-  }
+
+    .blast {
+
+    }
+
+  } // end space images
 
   .visit-planets {
     padding: 15px;
