remove sky and launch images for mobile

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -69,7 +69,10 @@ html {
       height: 100%;
     }
 
-    .blast {
+    .sky, .launch {  // ***** remove sky and launch images on mobile
+      @media @phone {
+        display: none;
+      }
 
     }
 
