--- a/css/index.css
+++ b/css/index.css
@@ -262,6 +262,12 @@ html {
   margin: 20px 2.5%;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images .sky,
+  .home .space-images .launch {
+    display: none;
+  }
+}
 .home .visit-planets {
   padding: 15px;
 }
