--- a/css/index.css
+++ b/css/index.css
@@ -263,6 +263,11 @@ html {
   height: 100%;
 }
 @media (max-width: 500px) {
+  .home .space-images .blast {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
   .home .space-images .sky,
   .home .space-images .launch {
     display: none;
@@ -289,8 +294,21 @@ html {
   display: flex;
   justify-content: center;
 }
+@media (max-width: 500px) {
+  .home .walk {
+    flex-direction: column-reverse;
+    padding: 3% 3%;
+  }
+}
 .home .walk .walk-text {
   width: 50%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text {
+    width: 96%;
+    padding-top: 2%;
+    padding-left: 3%;
+  }
 }
 .home .walk .walk-text h3 {
   margin-bottom: 10px;
@@ -306,6 +324,13 @@ html {
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-img {
+    width: 96%;
+    padding-right: 3%;
+    padding-left: 0%;
+  }
 }
 .home .walk .walk-img img {
   width: 100%;
