--- a/less/home-page.less
+++ b/less/home-page.less
@@ -69,6 +69,12 @@ html {
       height: 100%;
     }
 
+    .blast {  
+      @media @phone {  //*** set blast image to 100% on mobile
+        width: 100%;
+      }
+    }
+
     .sky, .launch {  // ***** remove sky and launch images on mobile
       @media @phone {
         display: none;
@@ -103,8 +109,19 @@ html {
     display: flex;
     justify-content: center;
 
+      @media @phone {
+        flex-direction: column-reverse;  // *** set walk section to column for image and text on mobile
+        padding: 3% 3%;  // *** lessen padding on mobile
+      }
+
     .walk-text {
       width: 50%;
+
+      @media @phone {  // *** set walk text to fuller width on mobile
+        width: 96%;
+        padding-top: 2%;
+        padding-left: 3%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -125,6 +142,12 @@ html {
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @phone {
+        width: 96%;
+        padding-right: 3%;
+        padding-left: 0%;
+      }
       
       img {
         width: 100%;
