--- a/less/home-page.less
+++ b/less/home-page.less
@@ -135,6 +135,15 @@ html {
         font-size: 1.5rem;
         padding-top: 5px;
         padding-left: 8px;
+
+        @media @phone {
+          width: 100%;
+          text-align: center;
+          height: 60px;
+          font-size: 2.4rem;
+          padding-top: 4%;
+          padding-left: 0%;
+        }
       }
 
     }  
