--- a/less/home-page.less
+++ b/less/home-page.less
@@ -112,6 +112,7 @@ html {
       @media @phone {
         flex-direction: column-reverse;  // *** set walk section to column for image and text on mobile
         padding: 3% 3%;  // *** lessen padding on mobile
+        margin-top: 3%;
       }
 
     .walk-text {
