added background color mixins to page title and nav

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -44,12 +44,12 @@ html {
 
 .page-title {
   font-size: 3.4rem;
-  // .bg-color-mixin();  //*****mixin used////
+  .bg-color-mixin();  //*****mixin used////
   width: 100%;
   padding-left: 33%;
 
   @media @phone {
-    background-color: white;
+    .bg-color-mixin();  //*****mixin used ///////
     padding-left: 0%;
     text-align: center;
     
