--- a/css/index.css
+++ b/css/index.css
@@ -241,12 +241,13 @@ html {
 }
 .home .page-title {
   font-size: 3.4rem;
+  background-color: #dad6d6;
   width: 100%;
   padding-left: 33%;
 }
 @media (max-width: 500px) {
   .home .page-title {
-    background-color: white;
+    background-color: #dad6d6;
     padding-left: 0%;
     text-align: center;
   }
