tweaked desktop page to get it closer to design page

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -47,6 +47,7 @@ html {
   .bg-color-mixin();  //*****mixin used////
   width: 100%;
   padding-left: 33%;
+  padding-top: 2%;
 
   @media @phone {
     .bg-color-mixin();  //*****mixin used ///////
@@ -135,8 +136,8 @@ html {
 
       .btn {  //*****other styling in parametric mixin in mixins.les*****//
         font-size: 1.5rem;
-        padding-top: 5px;
-        padding-left: 8px;
+        padding-top: 7px;
+        padding-left: 14px;
 
         @media @phone {
           width: 100%;
@@ -168,4 +169,9 @@ html {
     }
   }
 
+  footer {
+    width: 80%;
+    margin-left: 8%;
+    .bg-color-mixin();
+  }
 }// home
