--- a/css/index.css
+++ b/css/index.css
@@ -243,6 +243,7 @@ html {
   background-color: #f5f3f3;
   width: 100%;
   padding-left: 33%;
+  padding-top: 2%;
 }
 @media (max-width: 500px) {
   .home .page-title {
@@ -320,8 +321,8 @@ html {
 }
 .home .walk .walk-text .btn {
   font-size: 1.5rem;
-  padding-top: 5px;
-  padding-left: 8px;
+  padding-top: 7px;
+  padding-left: 14px;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
@@ -348,4 +349,9 @@ html {
   width: 100%;
   height: auto;
   border-radius: 8px;
+}
+.home footer {
+  width: 80%;
+  margin-left: 8%;
+  background-color: #f5f3f3;
 }
