added sign in to navbar

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -53,6 +53,7 @@ html {
     .bg-color-mixin();  //*****mixin used ///////
     padding-left: 0%;
     text-align: center;
+    width: 100%;
     
   }
 }
