--- a/css/index.css
+++ b/css/index.css
@@ -184,7 +184,7 @@ nav {
   padding-top: 2%;
   background-color: #f5f3f3;
   padding-bottom: 2%;
-  padding-left: 10%;
+  padding-left: 4%;
 }
 @media (max-width: 500px) {
   nav {
@@ -195,7 +195,7 @@ nav a:link {
   text-decoration: none;
   color: black;
   font-size: 1.5rem;
-  padding-right: 8%;
+  padding-right: 4%;
 }
 footer {
   color: #22283B;
@@ -250,6 +250,7 @@ html {
     background-color: #f5f3f3;
     padding-left: 0%;
     text-align: center;
+    width: 100%;
   }
 }
 .home .space-images {
