--- a/less/home-page.less
+++ b/less/home-page.less
@@ -140,6 +140,11 @@ html {
         padding-top: 7px;
         padding-left: 14px;
 
+          btn:hover {
+            background-color: white;
+            color: black;
+          }
+
         @media @phone {
           width: 100%;
           text-align: center;
