--- a/less/mixins.less
+++ b/less/mixins.less
@@ -5,11 +5,13 @@
     background-color: rgb(245, 243, 243);
 }
 
+//***second mixin for img border radius
 .img-rounded-corners {
-    border-radius: 8px;  // check on this later *******
+    border-radius: 8px;
+    border: none;  
 }
 
-/*****parametric mixin for button********/
+/*****parametric mixin for sign up button********/
 
 .btn-para-mixin(@bg-color; @radius; @text-color; @width; @height) {
     background-color: @bg-color;
