added button hover to reverse text and background color

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -140,11 +140,6 @@ html {
         padding-top: 7px;
         padding-left: 14px;
 
-          btn:hover {
-            background-color: white;
-            color: black;
-          }
-
         @media @phone {
           width: 100%;
           text-align: center;
@@ -155,6 +150,12 @@ html {
         }
       }
 
+    
+      
+  .btn:hover {
+    background-color: white;  //***** button hover to reverse text and background color
+    color: black;
+  }
     }  
 
     .walk-img {
@@ -180,4 +181,5 @@ html {
     margin-left: 8%;
     .bg-color-mixin();
   }
+
 }// home
