--- a/css/index.css
+++ b/css/index.css
@@ -328,10 +328,6 @@ html {
   padding-top: 7px;
   padding-left: 14px;
 }
-.home .walk .walk-text .btn btn:hover {
-  background-color: white;
-  color: black;
-}
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
     width: 100%;
@@ -341,6 +337,10 @@ html {
     padding-top: 4%;
     padding-left: 0%;
   }
+}
+.home .walk .walk-text .btn:hover {
+  background-color: white;
+  color: black;
 }
 .home .walk .walk-img {
   width: 46%;
