aligned text in button

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -137,8 +137,9 @@ html {
 
       .btn {  //*****other styling in parametric mixin in mixins.les*****//
         font-size: 1.5rem;
-        padding-top: 7px;
-        padding-left: 14px;
+        padding-left: 8px;
+        padding-bottom: 5px;
+        border: none;
 
         @media @phone {
           width: 100%;
