--- a/css/index.css
+++ b/css/index.css
@@ -325,8 +325,9 @@ html {
 }
 .home .walk .walk-text .btn {
   font-size: 1.5rem;
-  padding-top: 7px;
-  padding-left: 14px;
+  padding-left: 8px;
+  padding-bottom: 5px;
+  border: none;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
