--- a/less/navigation.less
+++ b/less/navigation.less
@@ -12,9 +12,10 @@ nav {
     .bg-color-mixin();  //***mixin used***//
     padding-bottom: 2%;
     padding-left: 4%;
+    height: 30px;
 
     @media @phone {
-        padding-left: 12%;
+        padding-left: 7%;
     }
 
     a:link {
@@ -22,5 +23,10 @@ nav {
         color: black;
         font-size: 1.5rem;
         padding-right: 4%;
+        width: auto;
+
+        a:visited {
+            color: black;
+        }
     }
 }
