--- a/less/home-page.less
+++ b/less/home-page.less
@@ -28,6 +28,11 @@ html {
           width: 90%;
           margin-top: .25%;
           margin-left: 4%;
+
+          @media @phone {
+            width: 98%;
+            margin-left: 0px;
+          }
         }
 
   //----------END MAIN HEADER------------//
