--- a/less/home-page.less
+++ b/less/home-page.less
@@ -186,6 +186,11 @@ html {
     width: 80%;
     margin-left: 8%;
     .bg-color-mixin();
+
+    @media @phone {
+      width: 98%;
+      margin-left: 0%;
+    }
   }
 
 }// home
